--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
 
     # Checkout
     co = checkout
+    com = checkout master
     cb = checkout -b
 
     # Cherry-pick
@@ -45,6 +46,7 @@
     pso  = push origin
     psom = push origin master
     psog = push origin gh-pages
+    psof = push origin HEAD --force
     psu  = push upstream
     psum = push upstream master
     psug = push upstream gh-pages
@@ -57,8 +59,17 @@
     rso = remote set-url origin
     rsu = remote set-url upstream
 
+    # Reset
+    rssf = reset --soft 'HEAD^'
+    rshr = reset --hard HEAD~1
+
+    # Delete
+    db  = branch -D
+    dbo = push origin --delete
+
     # Logs
-    l  = log --pretty=oneline --decorate --abbrev-commit --max-count=25
+    l = log --format='%Cred%h%Creset %s %Cgreen(%cr) %C(blue)<%an>%Creset%C(yellow)%d%Creset' --abbrev-commit --max-count=50
+    lg  = log --pretty=oneline --decorate --abbrev-commit --max-count=25
     ll = log --graph --pretty=format:'%Cred%h%Creset %an: %s %Creset%Cgreen(%cr)%Creset' --abbrev-commit --date=relative
 
     # Sync
