--- a/Sublime/Installed Packages/PyV8/osx-p3/config.json
+++ b/Sublime/Installed Packages/PyV8/osx-p3/config.json
@@ -1,1 +1,1 @@
-{"skip_update": false, "last_id": "cac719a547387675ff3d06804fb91691eae78c2d", "last_update": 1429190644.599262}
+{"last_update": 1431017869.537282, "skip_update": false, "last_id": "cac719a547387675ff3d06804fb91691eae78c2d"}
